--- a/server/.env
+++ b/server/.env
@@ -6,12 +6,12 @@ SELLER_EMAIL = "admin@example.com"
 SELLER_PASSWORD = "greatstack123"
 
 # MongoDB Setup
-MONGODB_URI = "--------------"
+MONGODB_URI = "mongodb+srv://layalodha:1234321LLP@cluster0.klitqbg.mongodb.net/"
 
 # Cloudinary
-CLOUDINARY_CLOUD_NAME = '-------'
-CLOUDINARY_API_KEY = '---------'
-CLOUDINARY_API_SECRET = '-----------'
+CLOUDINARY_CLOUD_NAME = 'dc2clqoef'
+CLOUDINARY_API_KEY = '578325957626456'
+CLOUDINARY_API_SECRET = 'VMr5RoyD48LQEdA8mxlBaGWWkXM'
 
 # Stripe Setup
 STRIPE_PUBLISHABLE_KEY = '------------'
